159721891-users-able-ask-questions

--- a/App/templates/Ask_question.html
+++ b/App/templates/Ask_question.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Jeff Andeko's UI for StackOverflow-lite">
     <meta name="keywords" content="user interface, using html and css">
     <meta name="author" content="Jeff Andeko">
-    <title> Questions |StackOverflow-lite | Welcome to a platform where developers engage to build one another </title>
+    <title> Ask Questions |StackOverflow-lite | Welcome to a platform where developers engage to build one another </title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
@@ -35,9 +35,6 @@
             <button type="button" name="answer_btn" class="signing_button1">click to submit</button>
         </form>
     </div>
-
-
-
 </main>
 
 </body>
