--- a/App/templates/Sign_up.html
+++ b/App/templates/Sign_up.html
@@ -41,7 +41,7 @@
                     <button class="sign facebook"> Sign up with Facebook</button>
                     <button class="sign google"> Sign up with Google</button>
                     <button class="sign github"> Sign up with GitHub</button>
-                    <p> Already have an account? click here to  <a href="Log_in.html" class="sign_up">Log in</a></p>
+                    <p> Already have an account? click here to  <a href="Log_in.html" class="sign">Log in</a></p>
                 </div>
             </div>
         </div>
