--- a/App/templates/question_details.html
+++ b/App/templates/question_details.html
@@ -25,9 +25,7 @@
     </div>
 </header>
 <main class="main">
-
-
-     <h2>Recent Questions</h2>
+     <h2>Recent Asked Questions</h2>
               <div class="quiz_details">
                   <div class="homeQuiz_area">
                        <div class="the_user"><strong>the questions is about making stackoverfloe lite why did you
@@ -89,9 +87,6 @@
 
 </main>
 <!-- html code for page footer-->
-<footer id="footer">
-    <div>
-        <p>StackOverflow-lite: Created by Jeff Andeko <a href="https://github.com/jeffandeko">@jeffandeko</a></p>
-    </div>
-</footer>
+
+
 </body>
