--- a/App/templates/index_page.html
+++ b/App/templates/index_page.html
@@ -31,14 +31,7 @@
 <main id="main">
 
     <!--- search button for homepage--->
-      <nav class="top_nav">
-          <form class="search" action="get what you have searched">
-              <input type="text" placeholder="Search here.." name="search">
-          </form>
-      </nav>
-    <div class="open">
 
-    </div>
      <div class="main_container">
           <div class="home1_div">
          <div class="side-menu">
@@ -58,7 +51,16 @@
 
               <div class="home_forum">
                   <div class="home_forum1">
-              <h7>Recent Questions</h7>
+                      <nav class="top_nav">
+                          <form class="search" action="get what you have searched">
+                              <input type="text" placeholder="Search here....." name="search">
+                          </form>
+                      </nav>
+                      <div class="done">
+                          <h5>.</h5>
+
+                      </div>
+                      <h7>Recent Questions</h7>
                   </div>
                   <div class="homeQuiz_area">
                       <div class="the_user"> <strong>Name:</strong> John peterson cxoza </div>
@@ -66,7 +68,8 @@
                       <span class="likes"><a href="#"><i class="material-icons">thumb_up</i></a> 10003</span>
                       <span class="dislikes"><a href="#"><i class="material-icons">thumb_down</i></a> 233</span>
                       <span class="date%time">Sunday, 12-8-18, 23:00 hrs</span>
-                      <h5>The first questions </h5>
+                      <h5>The first questions: what is your objective in this forum, however its is a forum for the<br> best intellectual ideads on we
+                      web development</h5>
                       <hr>
                       <div class="the_question">
                           <h5><a href="question_details.html"> click to see more details....</a></h5>
@@ -74,6 +77,7 @@
 
                   </div>
                   <div class="done">
+                      <h5>.</h5>
 
                   </div>
                   <div class="homeQuiz_area">
