--- a/App/templates/style.css
+++ b/App/templates/style.css
@@ -368,16 +368,16 @@ button.sign {
 /*search area*/
 nav.top_nav {
     background:rgb(255,255,255);
-    min-height:100px;
-    line-height:100px;
-    position:absolute;
+    min-height:50px;
+    line-height:50px;
+    position:;
     width:100%;
 
 }
 .open {
     width:100%;
-    min-height:10px;
-    position:absolute;
+    min-height:20px;
+    position:relative;
 }
 
 form.search input[type=text] {
@@ -386,7 +386,7 @@ form.search input[type=text] {
     font-size:15px;
     border:2px solid black;
     float:center;
-    width:60%;
+    width:100%;
     background:rgb(255,255,255);
     margin:auto;max-width:600px;
     margin:auto;max-height:50px;
@@ -400,7 +400,7 @@ div > div {
     width:20%;
     margin:0;
     line-height:3;
-    position:absolute;
+    position:relative;
 }
 
 .home2_div {
@@ -425,7 +425,10 @@ div > div {
   width: 100%;
   padding:4%;
 }
-
+.done{
+    line-height:1;
+    min-height:10px;
+}
 .homeQuiz_area {
   float:left;
   width:100%;
