Chore [#159739638] added a travis CI file

--- a/App/templates/Log_in.html
+++ b/App/templates/Log_in.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 <header>
-    <a href="Index_page.html" class="header_icon"> <strong>StackOverflow-lite</strong></a>
+    <a href="index.html" class="header_icon"> <strong>StackOverflow-lite</strong></a>
 
 </header>
 <main>
@@ -25,7 +25,7 @@
 
                 <input type="text" name="email" placeholder="Email">
                 <input type="text" name="password" placeholder="Password">
-                <input type="submit" name="Sign-up-button" value="Log In">
+                <a href="index.html"> <input type="submit" name="Sign-up-button" value="Log In"> </a>
 
 
                 <div class="sign-social">
