--- a/App/templates/home_page.html
+++ b/App/templates/home_page.html
@@ -35,7 +35,7 @@
      <div class="main_container">
           <div class="home1_div">
          <div class="side-menu">
-                <a href="index_page.html" class="active"><strong>Recent Questions.</strong></a>
+             <a href="home_page.html" class="active"><strong>Recent Questions.</strong></a>
                 <a href="Ask_question.html"><strong>Ask a question</strong></a>
                 <a href="#"><strong>view all questions</strong></a>
                 <a href="#"><strong>Resources</strong></a>
