--- a/App/templates/index.html
+++ b/App/templates/index.html
@@ -15,7 +15,7 @@
 <body>
 <!-- The HTML code for Header -->
 <header>
-    <a href="Landing_page.html" class="header_icon"> <strong>StackOverflow-lite</strong></a>
+    <a href="index_page.html" class="header_icon"> <strong>StackOverflow-lite</strong></a>
     <div>
         <ul>
             <li><a href="Sign_up.html" class="sign_up"><strong>Sign Up</strong></a></li>
