--- a/App/templates/question_details.html
+++ b/App/templates/question_details.html
@@ -18,8 +18,8 @@
     <a href="#" class="header_icon"> <strong>StackOverflow-lite</strong></a>
     <div>
         <ul>
-            <li><a href="#" class="sign_up"><strong>Sign Out</strong></a></li>
-            <li><a href="#"><strong>My Account</strong></a></li>
+            <li><a href="Log_in.html" class="sign_up"><strong>Sign Out</strong></a></li>
+            <li><a href="index_page.html"><strong>My Account</strong></a></li>
 
         </ul>
     </div>
